# purecpp

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  SUPPORT.md  all_cmake.sh  build.sh  clean_and_build.sh  conanfile.py  install_faiss_ubuntu.sh  install_faiss_yum.sh  main.cpp  model_to_onnx.py  models.py  models_to_onnx.py  module_cmake.sh  tests.sh  wget_dep.sh
.github/: SUPPORT.md
.github/ISSUE_TEMPLATE/: support.md
CMAKE_CHUNKS_CLEAN/: CMakeLists.txt  binding_chunks_clean.cpp  o.sh
CMAKE_EMBED/: CMakeLists.txt  binding_embed.cpp  o.sh
CMAKE_EXTRACT/: CMakeLists.txt  binding_extract.cpp  o.sh
CMAKE_LIBS/: CMakeLists.txt  binding_libs copy.cpp  binding_libs.cpp  o.sh
CMAKE_META/: CMakeLists.txt  binding_meta.cpp  conanfile.py  o.sh
F/: CMakeLists.txt  build.sh  main  main.cpp
Sandbox/: README.md  VectorSearch.ipynb  chunk_VDB.ipynb  chunk_query_web.ipynb  demo_chunk_VDB.ipynb
Sandbox/Tests/txts/: sample4.txt
Tests/: chunk_query_pdf.ipynb  chunk_query_web copy.ipynb  chunk_query_web.ipynb  chunk_similarity_docx.ipynb  chunks_test_new.ipynb  chunks_test_old.ipynb
Tests/Tests/docxs/: teste-2020-07.docx
Tests/Tests/txts/: sample1.txt
apps/: CMakeLists.txt
apps/Utils/: CMakeLists.txt  Utils.cpp  Utils.h
apps/chunk/: CMakeLists.txt
apps/chunk/chunk_count/: CMakeLists.txt  chunk_count.cpp
apps/chunk/chunk_default/: CMakeLists.txt  chunk_default.cpp
apps/chunk/chunk_query/: CMakeLists.txt  chunk_query.cpp
apps/chunk/chunk_similarity/: CMakeLists.txt  chunk_similarity.cpp
apps/clean_data/: CMakeLists.txt
apps/clean_data/content_cleaner/: CMakeLists.txt  content_cleaner.cpp
community/: CONTRIBUTING.md  generate_report.sh  report.txt
components/Chat/ChatHistory/: ChatHistory.cpp  ChatHistory.h
components/Chat/Message/: AIMessage.cpp  AIMessage.h  AIMessageChunk.cpp  AIMessageChunk.h  BaseMessage.h  BaseMessageChunk.h  HumanMessage.cpp  HumanMessage.h  SystemMessage.cpp  SystemMessage.h  Tool.h
components/Chunk/ChunkCommons/: ChunkCommons.cpp  ChunkCommons.h
components/Chunk/ChunkCount/: ChunkCount.cpp  ChunkCount.h
components/Chunk/ChunkDefault/: ChunkDefault.cpp  ChunkDefault.h
components/Chunk/ChunkQuery/: ChunkQuery.cpp  ChunkQuery.h
components/Chunk/ChunkSimilarity/: ChunkSimilarity.cpp  ChunkSimilarity.h
components/Chunk/ChunkSimilarity-Bruno/: ChunkSimilarity.cpp  ChunkSimilarity.h
components/CleanData/ContentCleaner/: ContentCleaner.cpp  ContentCleaner.h
components/DataLoader/: BaseLoader.cpp  BaseLoader.h  IBaseLoader.h
components/DataLoader/DOCXLoader/: DOCXLoader.cpp  DOCXLoader.h
components/DataLoader/PDFLoader/: PDFLoader.cpp  PDFLoader.h
components/DataLoader/TXTLoader/: TXTLoader.cpp  TXTLoader.h
components/DataLoader/WebLoader/: WebLoader.cpp  WebLoader.h
components/Embedding/: BaseEmbedding.cpp  BaseEmbedding.h  Document.h  IBaseEmbedding.h
components/Embedding/EmbeddingModel/: EmbeddingModel.cpp  EmbeddingModel.h
components/Embedding/EmbeddingOpenAI/: EmbeddingOpenAI.cpp  EmbeddingOpenAI.h  IEmbeddingOpenAI.h
components/FAISSBackend/: faiss_backend.cpp  faiss_backend.h
components/FAISSVectorSearch/: FAISSVectorSearch.cpp  FAISSVectorSearch.h
components/MetadataExtractor/: Document.h  IMetadataExtractor.h  MetadataExtractor.cpp  MetadataExtractor.h
components/MetadataExtractor/MetadataHFExtractor/: IMetadataHFExtractor.h  MetadataHFExtractor.cpp  MetadataHFExtractor.h
components/MetadataExtractor/MetadataRegexExtractor/: IMetadataRegexExtractor.h  MetadataRegexExtractor.cpp  MetadataRegexExtractor.h
components/Tools/WebSearch/include/: ICleaner.h  ICrawler.h  IEmitter.h  IWebSearch.h  ThreadPool.h
components/Tools/WebSearch/python/: websearch_binding.cpp
components/Tools/WebSearch/src/cleaner/: HtmlCleaner.cpp  HtmlCleaner.h
components/Tools/WebSearch/src/crawler/: CurlCrawler.cpp  CurlCrawler.h
components/Tools/WebSearch/src/engines/: BraveEngine.cpp  BraveEngine.h
components/Tools/WebSearch/src/manager/: JobManager.cpp  JobManager.h
components/Tools/WebSearch/src/markdown/: MarkdownPostProcessor.cpp  MarkdownPostProcessor.h
components/VectorDataBase/: VectorDataBase.cpp  VectorDataBase.h
components/VectorDatabase/: VectorDatabase.cpp  VectorStore.cpp  VectorStore.h
components/VectorDatabase/include/vectordb/: backend.h  document.h  exceptions.h  registry.h
components/VectorDatabase/include/vectordb/wrappers/: concurrent.h  metrics.h
components/VectorDatabase/python/: _vectordb.cpp  binding_vectordb.cpp
components/VectorDatabase/src/: document.cpp  registry.cpp
components/VectorDatabase/src/backends/: oracle_backend.cpp  redis_backend.cpp
components/VectorDatabase/src/wrappers/: concurrent.cpp  metrics.cpp
docs/: CONTRIBUTING.md
installers/: build_faiss.sh  install_cuda_torch.sh  install_faiss_ubuntu.sh  install_libs.sh  install_torch.sh
libs/Anthropic-cpp/include/anthropic/: anthropic.hpp
libs/CommonStructs/: CommonStructs.cpp  CommonStructs.h
libs/FileUtils/: FileUtils.h  FileUtilsLocal.h
libs/MemoryUtils/: MUtils.h
libs/RagException/: RagException.h
libs/StringUtils/: StringUtils.cpp  StringUtils.h
libs/ThreadSafeQueue/: ThreadSafeQueue.h
models/: README.md  hf_extract_model.py  hf_model_to_onnx.py
package/: setup.py
package/pureai/: libtorch_config.py
scripts/: 2faiss_installer.sh  configure_conan_profile.sh  create_pip_package.sh  env_config.sh  faiss_installer.sh  hf_extract_model.py  hf_model_to_onnx.py  install_faiss.sh  install_libs.sh  install_python_dependencies.sh  install_torch.sh  setting_conan_profile.sh  torch_installer.sh
src/: CMakeLists.txt  binding.cpp
